--- a/src/main/resources/emailTemplates/passwordRecovery.html
+++ b/src/main/resources/emailTemplates/passwordRecovery.html
@@ -531,7 +531,7 @@
         
             <div style="Margin-left: 20px;Margin-right: 20px;Margin-bottom: 24px;">
       <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-        <h2 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #3e4751;font-size: 16px;line-height: 24px;font-family: Ubuntu,sans-serif;">Your new account informations:</h2><p class="size-14" style="Margin-top: 16px;Margin-bottom: 0;font-size: 14px;line-height: 21px;" lang="x-size-14"><strong>Account</strong>:&nbsp; {{account_name}}<br>
+        <h2 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #3e4751;font-size: 16px;line-height: 24px;font-family: Ubuntu,sans-serif;">Your account informations:</h2><p class="size-14" style="Margin-top: 16px;Margin-bottom: 0;font-size: 14px;line-height: 21px;" lang="x-size-14"><strong>Account</strong>:&nbsp; {{account_name}}<br>
   <strong>Email</strong>:&nbsp; {{account_email}}<br>
   <strong>Password</strong>:&nbsp; {{account_pass}}.</p><p style="Margin-top: 20px;Margin-bottom: 0;"><span style="text-decoration: inherit;">This email generated a password recovery token, the token will last for 30 minutes, to change your password use the button at the end of the email!</span><br>
   <br>
