--- a/src/main/resources/emailTemplates/coinsPurchaseEmail.html
+++ b/src/main/resources/emailTemplates/coinsPurchaseEmail.html
@@ -853,7 +853,7 @@
                         <p>
                         Agradecemos sua doa&#231;&#227;o, e esperamos sempre lhe entregar a
                         melhor experi&#234;ncia e divers&#227;o, fique atento as nossas
-                        novidades no nosso canal do discord e em nosso webSite, para fazer
+                        novidades no nosso canal do discord e em nosso website, para fazer
                         melhor uso de suas coins!
                       </p>
                     </div>
